--- a/src/components/EventSingle/EventSingle.scss
+++ b/src/components/EventSingle/EventSingle.scss
@@ -1,19 +1,20 @@
 @import "../../colors";
 
 
+// ESTRUCTURA DIV IMAGEN
 
 .singleEventMain {
 
     display: flex;
     flex-direction: column;
-    // margin-top: 250px;
+    align-items: center;
+    background-color: $creammde;
 
     .eventPic {
         display: flex;
         width: 100%;
         height: 37vh;
         margin-top: 30.8%;
-
         background-image: url('/src/images/EventSingle_1.png');
         background-size: auto;
         background-position: center;
@@ -41,7 +42,6 @@
         .picFooterIcon {
             display: flex;
             flex-grow: 0.1;
-
         }
 
     }
@@ -54,74 +54,176 @@
         z-index: 21;
     }
 
-}
+    // ESTRUCTURA DIV INFORMACIÓN
 
-.eventBodyMain {
-    display: flex;
-    flex-direction: column;
 
-    .bodyHeaderMain {
+    .eventBodyMain {
         display: flex;
+        flex-direction: column;
+        width: 90%;
 
-        .headerMainLeft {
+        .bodyHeaderMain {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+
+            .headerMainLeft {
+                display: flex;
+                flex-direction: column;
+
+                .eventType {
+                    align-self: flex-start;
+                    font-family: $atkinsonmde;
+                    font-size: 18px;
+                    color: $darkbluemde;
+                    font-weight: 500;
+                    margin-top: 7%;
+                    margin-bottom: 0%;
+                    margin-left: 0%;
+                    margin-right: 0%;
+                }
+
+                .eventTitle {
+                    align-self: flex-start;
+                    line-height: normal;
+                    font-family: $atkinsonmde;
+                    font-size: 29px;
+                    color: $darkbluemde;
+                    font-weight: 600;
+                    margin-top: -8%;
+                    margin-bottom: 0%;
+                    margin-left: 0%;
+                    margin-right: 0%;
+
+                }
+            }
+
+            .headerMainRight {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-content: center;
+
+
+                .mainButton {
+                    display: flex;
+                    flex-direction: column;
+                    align-content: center;
+                    justify-content: center;
+                    flex-grow: 1;
+                    background-color: $darkbluemde;
+                    border-radius: 5px;
+                    margin-top: 20px;
+                    height: 45px;
+
+                    .mainButtonText {
+                        font-family: $atkinsonmde;
+                        font-size: 18px;
+                        text-align: center;
+                        flex-grow: 1;
+                        color: $creammde;
+                        margin-left: 30px;
+                        margin-right: 30px;
+                    }
+                }
+            }
+            
+        }
+        .bodyContentMain {
+            display: inline;
+           
+            .bodyContentText1 {
+                margin-top: 25px;
+                font-family: $atkinsonmde;
+                font-size: 16px;
+                text-align: justify;
+                color: $blackmde;
+                font-weight: 400;
+                line-height: 20px;
+                word-spacing: -2px;
+            }
+            .bodyContentText2 {
+                margin-top: -10px;
+                font-family: $atkinsonmde;
+                font-size: 16px;
+                text-align: justify;
+                color: $blackmde;
+                font-weight: 400;
+                line-height: 20px;
+                word-spacing: -2px;
+            }
+            .bodyContentText3 {
+                 margin-top: -10px;
+                font-family: $atkinsonmde;
+                font-size: 16px;
+                text-align: justify;
+                color: $blackmde;
+                font-weight: 400;
+                line-height: 20px;
+                word-spacing: -2px;
+            }
+        }
+
+
+        
+        .bodyFooterUp {
             display: flex;
 
-            .eventType {
+            .footerUpTime {
                 font-family: $atkinsonmde;
-                font-size: 18;
+                font-size: 15;
             }
 
-            .eventTitle {
+            .footerUpAsistentes {
                 font-family: $atkinsonmde;
-                font-size: 29;
+                font-size: 15;
             }
         }
 
-        .headerMainRight {
+        .bodyFooterDown {
             display: flex;
 
-            .mainButtonText {
+            .footerDownDate {
                 font-family: $atkinsonmde;
-                font-size: 18;
+                font-size: 15;
+            }
+
+            .footerUpAsistentes {
+                font-family: $atkinsonmde;
+                font-size: 15;
             }
         }
+        
     }
 
-    .bodyContentMain {
-        display: flex;
-
-        .bodyContentText {
-            font-family: $atkinsonmde;
-            font-size: 15;
-        }
-    }
-
-    .bodyFooterUp {
-        display: flex;
-
-        .footerUpTime {
-            font-family: $atkinsonmde;
-            font-size: 15;
-        }
-
-        .footerUpAsistentes {
-            font-family: $atkinsonmde;
-            font-size: 15;
-        }
-    }
-
-    .bodyFooterDown {
-        display: flex;
-
-        .footerDownDate {
-            font-family: $atkinsonmde;
-            font-size: 15;
-        }
-
-        .footerUpAsistentes {
-            font-family: $atkinsonmde;
-            font-size: 15;
-        }
-    }
 }
-
+// .bodyContentText1 {
+//     margin-top: 25px;
+//     font-family: $atkinsonmde;
+//     font-size: 16px;
+//     text-align: justify;
+//     color: $blackmde;
+//     font-weight: 400;
+//     line-height: 20px;
+//     word-spacing: -2px;
+// }
+// .bodyContentText2 {
+//     margin-top: -10px;
+//     font-family: $atkinsonmde;
+//     font-size: 16px;
+//     text-align: justify;
+//     color: $blackmde;
+//     font-weight: 400;
+//     line-height: 20px;
+//     word-spacing: -2px;
+// }
+// .bodyContentText3 {
+//      margin-top: -10px;
+//     font-family: $atkinsonmde;
+//     font-size: 16px;
+//     text-align: justify;
+//     color: $blackmde;
+//     font-weight: 400;
+//     line-height: 20px;
+//     word-spacing: -2px;
+// }
