--- a/src/components/EventSingle/EventSingle.scss
+++ b/src/components/EventSingle/EventSingle.scss
@@ -77,7 +77,7 @@
                     font-size: 18px;
                     color: $darkbluemde;
                     font-weight: 500;
-                    margin-top: 7%;
+                    margin-top: 8%;
                     margin-bottom: 0%;
                     margin-left: 0%;
                     margin-right: 0%;
@@ -113,8 +113,8 @@
                     flex-grow: 1;
                     background-color: $darkbluemde;
                     border-radius: 5px;
-                    margin-top: 20px;
-                    height: 45px;
+                    margin-top: 15px;
+                    height: 40px;
 
                     .mainButtonText {
                         font-family: $atkinsonmde;
@@ -122,8 +122,8 @@
                         text-align: center;
                         flex-grow: 1;
                         color: $creammde;
-                        margin-left: 30px;
-                        margin-right: 30px;
+                        margin-left: 25px;
+                        margin-right: 25px;
                     }
                 }
             }
@@ -131,11 +131,12 @@
         }
         .bodyContentMain {
             display: inline;
+            margin-top: -10px;
            
             .bodyContentText1 {
                 margin-top: 25px;
                 font-family: $atkinsonmde;
-                font-size: 16px;
+                font-size: 15px;
                 text-align: justify;
                 color: $blackmde;
                 font-weight: 400;
@@ -145,7 +146,7 @@
             .bodyContentText2 {
                 margin-top: -10px;
                 font-family: $atkinsonmde;
-                font-size: 16px;
+                font-size: 15px;
                 text-align: justify;
                 color: $blackmde;
                 font-weight: 400;
@@ -155,7 +156,7 @@
             .bodyContentText3 {
                  margin-top: -10px;
                 font-family: $atkinsonmde;
-                font-size: 16px;
+                font-size: 15px;
                 text-align: justify;
                 color: $blackmde;
                 font-weight: 400;
@@ -168,62 +169,49 @@
         
         .bodyFooterUp {
             display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: -20px;
 
             .footerUpTime {
                 font-family: $atkinsonmde;
-                font-size: 15;
+                font-size: 14px;
+                color: $darkbluemde;
+                font-weight: 600;
+                letter-spacing: 1px;
             }
 
             .footerUpAsistentes {
                 font-family: $atkinsonmde;
-                font-size: 15;
+                font-size: 13px;
+                color: $darkbluemde;
+                font-weight: 400;
+               
             }
         }
 
         .bodyFooterDown {
             display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: -30px;
 
             .footerDownDate {
                 font-family: $atkinsonmde;
-                font-size: 15;
+                font-size: 14px;
+                color: $darkbluemde;
+                font-weight: 600;
+                letter-spacing: 1px;
             }
 
-            .footerUpAsistentes {
+            .footerDownInscritos {
                 font-family: $atkinsonmde;
-                font-size: 15;
+                font-size: 13px;
+                color: $darkbluemde;
+                font-weight: 400;
             }
         }
         
     }
 
 }
-// .bodyContentText1 {
-//     margin-top: 25px;
-//     font-family: $atkinsonmde;
-//     font-size: 16px;
-//     text-align: justify;
-//     color: $blackmde;
-//     font-weight: 400;
-//     line-height: 20px;
-//     word-spacing: -2px;
-// }
-// .bodyContentText2 {
-//     margin-top: -10px;
-//     font-family: $atkinsonmde;
-//     font-size: 16px;
-//     text-align: justify;
-//     color: $blackmde;
-//     font-weight: 400;
-//     line-height: 20px;
-//     word-spacing: -2px;
-// }
-// .bodyContentText3 {
-//      margin-top: -10px;
-//     font-family: $atkinsonmde;
-//     font-size: 16px;
-//     text-align: justify;
-//     color: $blackmde;
-//     font-weight: 400;
-//     line-height: 20px;
-//     word-spacing: -2px;
-// }
