--- a/src/components/MdENoticesSingle/MdENoticesSingle.scss
+++ b/src/components/MdENoticesSingle/MdENoticesSingle.scss
@@ -1,6 +1,10 @@
 @import "../../colors";
 
 .scroll_container_single_notices {
+    background-color: $backcolormde;
+    margin-bottom: 17%;
+    height: 100vh;
+
     .main_div_single_notices {
         background-color: $backcolormde;
         width: 100vw;
@@ -15,7 +19,7 @@
         .return_to_home_button {
             background-color: rgba(0, 67, 104, 1);
             border-radius: 50%;
-            width: 5.3%;            
+            width: 5.3%;
             margin-top: 36%;
             padding: 1%;
             z-index: 2;
@@ -23,7 +27,7 @@
             display: flex;
             padding-left: 2%;
             margin-left: -77%;
-            
+
         }
 
         .main_div_text_single_notices {
@@ -94,7 +98,6 @@
                 .input_div_with_button {
                     display: flex;
                     flex-direction: row;
-                    gap: 2.5%;
 
                     .comment_input {
                         margin-top: 3%;
@@ -106,77 +109,88 @@
                     }
 
                     .send_button_div {
+                        margin-top: 5%;
                         height: 28px;
+                        border: none;
+                        background-color: transparent;
 
-                        .send_button_img {
-                            margin-top: 70%;
-                        }
                     }
                 }
             }
         }
 
-        .div_show_all_comments {
-            margin-top: 3%;
+        .main_container_all_notices {
+            margin-bottom: 18%;
+            margin-top: 5%;
             background-color: $backcolormde;
             width: 100%;
-            justify-content: center;
-            margin-bottom: 38%;
+            .div_show_all_comments {                
+                background-color: $backcolormde;
+                width: 100%;
+                justify-content: center;
+                                            
 
-            .user_profile_comments {
-                margin: auto;
-                width: 86%;
-                display: flex;
-                flex-direction: row;
-                gap: 3%;
-                margin-bottom: -1.5%;
+                .user_profile_comments {
+                    margin: auto;
+                    width: 86%;
+                    display: flex;
+                    flex-direction: row;
+                    gap: 3%;
+                    margin-bottom: -1.5%;
 
-                .user_name_comments {
-                    font-size: 15px;
-                    font-family: $atkinsonmde;
-                    color: $darkbluemde;
-                    font-weight: bold;
+                    .user_name_comments {
+                        font-size: 15px;
+                        font-family: $atkinsonmde;
+                        color: $darkbluemde;
+                        font-weight: bold;
+                    }
+
+                    .user_name_userType_comments {
+                        font-size: 15px;
+                        font-family: $atkinsonmde;
+                        color: $darkbluemde;
+                    }
                 }
 
-                .user_name_userType_comments {
-                    font-size: 15px;
-                    font-family: $atkinsonmde;
-                    color: $darkbluemde;
+                .body_user_comment_profile {
+                    display: flex;
+                    flex-direction: row;
+                    width: 86%;
+                    margin: auto;
+                    gap: 5%;
+                    margin-bottom: -1.5%;
+
+                    .user_img_profile_comments {
+
+
+                        .userimgcomm {
+                            width: 45px;
+                            height: 45px;
+                            border-radius: 50%;
+                            
+                        }
+                    }
+
+                    .body_text_comments {
+                        font-size: 15px;
+                        font-family: $atkinsonmde;
+                        color: #3A3A3A;
+                        text-align: left;
+                        margin-top: 2%;
+                    }
                 }
+
+                .separator_line_comments_single_notices {
+                    width: 20%;
+                    border: none;
+                    background-color: $lightbluemde;
+                    height: 1.7px;
+                    margin-top: 5%;
+                    margin-left: 7%;
+                    
+                }
+
             }
-
-            .body_user_comment_profile {
-                display: flex;
-                flex-direction: row;
-                width: 86%;
-                margin: auto;
-                gap: 3%;
-                margin-bottom: -1.5%;
-
-                .user_img_profile_comments {
-                    border-radius: 50%;
-                }
-
-                .body_text_comments {
-                    font-size: 15px;
-                    font-family: $atkinsonmde;
-                    color: #3A3A3A;
-                    text-align: left;
-                    margin-top: 0;
-                }
-            }
-
-            .separator_line_comments_single_notices {
-                width: 20%;
-                border: none;
-                background-color: $lightbluemde;
-                height: 1.7px;
-                margin-bottom: 3%;
-                margin-left: 7%;
-                /* Alineación a la izquierda */
-            }
-
-
         }
     }
 }
