--- a/src/components/NavigationEvents/NavigationEvents.scss
+++ b/src/components/NavigationEvents/NavigationEvents.scss
@@ -7,8 +7,8 @@
     flex-direction: column;
     margin-top: 250px;
     width: 92vw;
-    // height: 300vh;
 
+    //EVENT UP FIXED
     .eventRecomendFixed {
         width: 100%;
         border-radius: 10px;
@@ -20,7 +20,7 @@
     }
 
 
-
+    //TEXT : RECOMENDADOS PARA TI
     .sideText {
         display: flex;
         flex-direction: column;
@@ -29,11 +29,11 @@
         font-weight: 600;
         font-size: 17px;
         color: $darkbluemde;
-        margin-bottom: -3px;
+        margin-bottom: 4px;
         margin-top: 25px;
     }
 
-
+    //SIDE X SCROLL GLOBAL CONTAINER (needed to keep the X scroll)
     .eventSideScroll {
         display: flex;
         flex-direction: row;
@@ -43,7 +43,7 @@
         padding-bottom: 20px;
         max-height: 20vh;
 
-
+        //SIDE X SCROLL MAIN CONTAINER 
 
         .eventSideArray {
             display: flex;
@@ -52,36 +52,168 @@
             max-height: 20vh;
             column-gap: 10px;
 
-
+            //SMALL CARD
             .eventside1 {
-                border-radius: 10px;
-                flex: 1;
-                width: 80vw;
+                display: flex;
+                flex-direction: column;
+                // border-radius: 10px;
+                // flex: 1;
+                width: 251px;
                 height: 20vh;
-                background-size: cover;
-                background-position: center;
-                background-image: url('/src/images/Ev_recom_1.png');
+
+                // background-size: cover;
+                // background-position: center;
+                // background-image: url('/src/images/Ev_recom_1.png');
+                //MITAD DE ARRIBA
+                .sideUpContainer {
+                    display: flex;
+                    flex-direction: column;
+                    height: 50%;
+                    width: 251px;
+                    background-size: auto;
+                    background-position: center;
+                    background-image: url('/src/images/0_CardSmall_TEST.png');
+                    background-repeat: no-repeat;
+                    border-top-left-radius: 10px;
+                    border-top-right-radius: 10px;
+
+                    .iconarrow{
+                        display: flex;
+                        align-self: flex-end;
+                        margin-top: 24%;
+                        margin-right: 10px;
+                        // transform: translateX(50%);
+                        z-index: 2;
+                    }
+                }
+
+                //MITAD DE ABAJO
+                .sideDownContainer {
+                    display: flex;
+                    flex-direction: row;
+                    height: 50%;
+                    width: 251px;
+                    background-color: $orangemde;
+                    border-bottom-left-radius: 10px;
+                    border-bottom-right-radius: 10px;
+
+                    .downLeft {
+                        display: flex;
+                        flex-direction: column;
+                        flex-grow: 1;
+                        // align-content: center;
+                        // justify-content: flex-start;
+
+
+                        .leftEventType {
+                            align-self: flex-start;
+                            margin-top: 7px;
+                            margin-bottom: 0;
+                            margin-right: 0;
+                            margin-left: 20px;
+                            font-family: $atkinsonmde;
+                            font-size: 12px;
+                            font-weight: 400;
+                            color: $creammde;
+                        }
+
+                        .leftEventTitle {
+                            align-self: flex-start;
+                            margin-top: 0;
+                            margin-bottom: 0;
+                            margin-right: 0;
+                            margin-left: 20px;
+                            font-family: $atkinsonmde;
+                            font-size: 17px;
+                            font-weight: 600;
+                            color: $creammde;
+
+                        }
+
+                        .leftEventTime {
+                            align-self: flex-start;
+                            margin-top: 8px;
+                            margin-bottom: 0;
+                            margin-right: 0;
+                            margin-left: 20px;
+                            font-family: $atkinsonmde;
+                            font-size: 10px;
+                            font-weight: 400;
+                            color: $creammde;
+                        }
+
+                        .leftEventDate {
+                            align-self: flex-start;
+                            margin-top: -2px;
+                            margin-bottom: 0;
+                            margin-right: 0;
+                            margin-left: 20px;
+                            font-family: $atkinsonmde;
+                            font-weight: 400;
+                            font-size: 10px;
+                            color: $creammde;
+                        }
+                    }
+
+                    .downRight {
+                        display: flex;
+                        flex-direction: column;
+                        flex-grow: 1;
+                        align-items: center;
+                        justify-content: flex-end;
+
+                        .rightButtonTag1 {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            background-color: $lightbluemde;
+                            border-top-left-radius: 10px;
+                            border-bottom-left-radius: 10px;
+                            border-top-right-radius: 10px;
+                            border-bottom-right-radius: 10px;
+                            height: 20px;
+                            margin-bottom: 10px;
+
+                            .tagText1 {
+                                font-family: $atkinsonmde;
+                                font-size: 9px;
+                                color: $darkbluemde;
+                                font-weight: lighter;
+                                margin-left: 10px;
+                                margin-right: 10px;
+                            }
+                        }
+
+                        .rightButtonTag2 {
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: center;
+                            background-color: $lightbluemde;
+                            border-top-left-radius: 10px;
+                            border-bottom-left-radius: 10px;
+                            border-top-right-radius: 10px;
+                            border-bottom-right-radius: 10px;
+                            height: 20px;
+                            margin-bottom: 10px;
+
+                            .tagText2 {
+                                font-family: $atkinsonmde;
+                                font-size: 9px;
+                                color: $darkbluemde;
+                                font-weight: lighter;
+                                margin-left: 10px;
+                                margin-right: 10px;
+
+                            }
+                        }
+
+                    }
+                }
+
+ // ICON ARROW
+              
             }
 
-            .eventside2 {
-                border-radius: 10px;
-                flex: 1;
-                width: 300px;
-                height: 20vh;
-                background-size: cover;
-                background-position: center;
-                background-image: url('/src/images/Ev_recom_2.png');
-            }
-
-            .eventside3 {
-                border-radius: 10px;
-                flex: 1;
-                width: 30wh;
-                height: 20vh;
-                background-size: cover;
-                background-position: center;
-                background-image: url('/src/images/Ev_recom_3.png');
-            }
         }
 
     }
@@ -123,7 +255,7 @@
             background-repeat: no-repeat;
             height: 33vh;
         }
-        
+
         .eventDown2 {
             display: flex;
             flex-shrink: 1;
@@ -135,7 +267,7 @@
             background-repeat: no-repeat;
             height: 33vh;
         }
-        
+
         .eventDown3 {
             display: flex;
             flex-shrink: 1;
@@ -150,10 +282,3 @@
         }
     }
 }
-
-
-
-
-
-
-
